--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,14 +6,16 @@
   "customizations": {
     "vscode": {
       "extensions": [
-		"streetsidesoftware.code-spell-checker",
-		"esbenp.prettier-vscode",
-		"ms-azuretools.vscode-docker"
-	]
+        "streetsidesoftware.code-spell-checker",
+        "esbenp.prettier-vscode",
+        "ms-azuretools.vscode-docker",
+        "Prisma.prisma"
+      ]
     }
   },
   "forwardPorts": [
-    3000
+    3000,
+    5432
   ],
   "postCreateCommand": "yarn install",
   "postStartCommand": "git config --global --add safe.directory /workspace"
