--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	},
 	"dependencies": {
 		"@fastify/cookie": "9.3.1",
+		"@fastify/cors": "^9.0.1",
 		"@fastify/jwt": "^8.0.1",
 		"@prisma/client": "5.9.1",
 		"@types/bcryptjs": "2.4.6",
